[gd_scene load_steps=17 format=3 uid="uid://duhqhbgxmug7m"]

[ext_resource type="Script" uid="uid://cr6m1l7oooaop" path="res://scripts/main/launch_manager.gd" id="1_700et"]
[ext_resource type="Texture2D" uid="uid://bokfd8uy6s6b4" path="res://assets/aim_bg.png" id="1_cw6cr"]
[ext_resource type="PackedScene" uid="uid://bs48nvkckyw6j" path="res://scenes/game_scene/ParalaxeSea.tscn" id="1_fhy3a"]
[ext_resource type="Texture2D" uid="uid://hb34sl2fdjfg" path="res://assets/aim_needle.png" id="2_6y8rp"]
[ext_resource type="Script" uid="uid://c486e1smalas7" path="res://scripts/main/aim_indicator.gd" id="2_700et"]
[ext_resource type="Texture2D" uid="uid://cq15w3ueetero" path="res://assets/aim_target.png" id="5_o347i"]
[ext_resource type="Script" uid="uid://cs5uulwlyh5x7" path="res://scripts/main/game_manager.gd" id="6_7ulqd"]
[ext_resource type="Script" uid="uid://de3s64g4d4bxi" path="res://scripts/main/force_indicator.gd" id="7_tr8b4"]
[ext_resource type="Script" uid="uid://dfd2uiaetpmg0" path="res://scripts/main/pebble.gd" id="7_wedpv"]
[ext_resource type="Texture2D" uid="uid://bcw4ct7h86aqq" path="res://assets/aim_force.png" id="8_1qftq"]
[ext_resource type="PackedScene" uid="uid://nbshwsd86jm8" path="res://scenes/game_scene/PebbleAnim'.tscn" id="9_oxnsv"]
[ext_resource type="Texture2D" uid="uid://bajycedvqv05r" path="res://assets/PNG/pebble_shadow.png" id="12_1qftq"]
[ext_resource type="SpriteFrames" uid="uid://cqp6ameybihib" path="res://assets/PNG/Animation/ArcaniquePaddleRotate.tres" id="13_vvut4"]
[ext_resource type="PackedScene" uid="uid://dx4tub02ajasy" path="res://scenes/game_scene/water_drop_particle.tscn" id="14_5prq0"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7ulqd"]
size = Vector2(1000, 4)

[sub_resource type="Curve" id="Curve_1qftq"]
_data = [Vector2(0, 0), 0.0, 0.9, 0, 0, Vector2(0.2, 0.2), 1.0, 1.2, 0, 0, Vector2(1, 1), 1.2, 0.0, 0, 0]
point_count = 3

[node name="Game" type="Node2D"]

[node name="Sea" parent="." instance=ExtResource("1_fhy3a")]
position = Vector2(0, -56)

[node name="LaunchManager" type="Node2D" parent="." node_paths=PackedStringArray("aim_indicator", "force_indicator")]
visible = false
position = Vector2(-174, -85)
script = ExtResource("1_700et")
current_launching_phase = 1
aim_indicator = NodePath("AimIndicator")
aim_ratio_speed = 2.0
aim_ratio_target = 0.5
bypass_forceTest = false
force_indicator = NodePath("ForceIndicator")
force_ratio_speed = 1.5

[node name="AimIndicator" type="Sprite2D" parent="LaunchManager" node_paths=PackedStringArray("needle_pivot", "target_pivot")]
position = Vector2(-63, 61)
texture = ExtResource("1_cw6cr")
script = ExtResource("2_700et")
needle_pivot = NodePath("NeedlePivot")
target_pivot = NodePath("TargetPivot")

[node name="NeedlePivot" type="Node2D" parent="LaunchManager/AimIndicator"]
position = Vector2(-32, 0)

[node name="AimNeedle" type="Sprite2D" parent="LaunchManager/AimIndicator/NeedlePivot"]
position = Vector2(32, 0)
texture = ExtResource("2_6y8rp")

[node name="TargetPivot" type="Node2D" parent="LaunchManager/AimIndicator"]
position = Vector2(-32, 0)

[node name="TargetNeedle" type="Sprite2D" parent="LaunchManager/AimIndicator/TargetPivot"]
position = Vector2(32, -3)
rotation = -0.12217305
texture = ExtResource("5_o347i")

[node name="ForceIndicator" type="Node2D" parent="LaunchManager"]
position = Vector2(-82, 60)
script = ExtResource("7_tr8b4")
force_gauge_el_texture = ExtResource("8_1qftq")

[node name="GameManager" type="Node2D" parent="." node_paths=PackedStringArray("launch_manager", "pebble")]
script = ExtResource("6_7ulqd")
launch_manager = NodePath("../LaunchManager")
pebble = NodePath("../Pebble")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(346, 93)
texture = SubResource("PlaceholderTexture2D_7ulqd")

[node name="PebbleShadow" type="Sprite2D" parent="."]
position = Vector2(-225, -20)
texture = ExtResource("12_1qftq")

[node name="Pebble" type="Node2D" parent="." node_paths=PackedStringArray("pebble_shadow")]
position = Vector2(-226, -22)
script = ExtResource("7_wedpv")
initial_position = Vector2(-226, -22)
water_height = 95.0
pebble_shadow = NodePath("../PebbleShadow")
juicy_velocity_curve = SubResource("Curve_1qftq")

[node name="Camera2D" type="Camera2D" parent="Pebble"]
position = Vector2(189, -103)
zoom = Vector2(1.5, 1.5)

[node name="PebbleAnim" parent="Pebble" instance=ExtResource("9_oxnsv")]
scale = Vector2(1, 0.5)
sprite_frames = ExtResource("13_vvut4")
autoplay = "default"
frame_progress = 0.0

[node name="WaterDropParticle" parent="Pebble" instance=ExtResource("14_5prq0")]
